<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_page_padding"
    android:orientation="vertical"
    tools:context=".ForgotPasswordPage">

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_page_padding"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textSize="@dimen/app_header_size"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/blue_200"/>

    <TextView
        android:id="@+id/forgotPasswordContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/app_page_padding"
        android:text="@string/forgot_password_content"
        android:textSize="@dimen/app_normal_text_size"
        android:textColor="@color/purple_500"
        android:fontFamily="@font/montserrat_regular"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/purple_200"
        android:layout_marginTop="@dimen/app_margin_size"
        app:boxBackgroundMode="outline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHighlight="@color/purple_200"
            android:padding="@dimen/app_normal_text_size"
            android:background="@drawable/edit_text_oval_bg"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_page_padding"
        android:background="@drawable/oval_button"
        android:text="@string/send_reset_mail"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox"/>

</LinearLayout>