<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/app_page_padding"
    tools:context=".AddAdminAccountPage">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/adminProfilePic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/user_icon"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeProfilePicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/app_margin_size"
        android:layout_marginTop="@dimen/app_margin_size"
        android:background="@drawable/edit_text_oval_bg"
        android:text="@string/change_profile_picture"
        android:drawableStart="@drawable/ic_edit"
        android:drawableTint="@color/yellow_700"
        android:textColor="@color/yellow_700"
        android:fontFamily="@font/montserrat_bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/adminProfilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_page_padding"
        android:text="@string/username"
        android:textSize="@dimen/app_normal_text_size"
        android:textColor="@color/purple_500"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@id/changeProfilePicButton"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_size"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/usernameTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_normal_text_size"
            android:textColorHighlight="@color/purple_200"
            android:background="@drawable/edit_text_oval_bg"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_page_padding"
        android:text="@string/email"
        android:textSize="@dimen/app_normal_text_size"
        android:textColor="@color/purple_500"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_size"
        app:boxBackgroundMode="none"
        app:layout_constraintTop_toBottomOf="@id/emailTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_normal_text_size"
            android:textColorHighlight="@color/purple_200"
            android:background="@drawable/edit_text_oval_bg"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createAdminButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_header_size"
        android:background="@drawable/oval_button"
        android:backgroundTint="@color/purple_500"
        android:text="@string/create_admin"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>